more media queries to fix collision on mobile ;closes #54

--- a/index.css
+++ b/index.css
@@ -415,6 +415,18 @@ div.leaflet-control-attribution {padding:2px 4px 3px !important;}
 
 }
 
-@media (max-width: 360px) {
+@media (max-width: 400px) {
+  div.title-cell {
+    font-size:16px;
+    width:55%;
+  }
 }
+
+@media (max-width: 350px) {
+  div.title-cell {
+    font-size:14px;
+    width:55%;
+  }
+}
+
 
